--- a/style.css
+++ b/style.css
@@ -13,5 +13,8 @@ div#create-course > p, div#setup-holes > p {
 }
 
 div#create-course-box {
-    display: none
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
