--- a/style.css
+++ b/style.css
@@ -25,3 +25,27 @@ div#create-course-box {
     align-items: center;
     flex-direction: column;
 }
+
+div#courses {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+div#courses > div {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 45px;
+    justify-content: center;
+    align-items: center;
+}
+
+div#courses > div > div {
+    display: flex;
+    height: 25px;
+    width: 80px;
+    background-color: lightseagreen;
+    color: white;
+}
