--- a/style.css
+++ b/style.css
@@ -42,10 +42,6 @@ div#courses > div {
     align-items: center;
 }
 
-div#courses > div > p {
-    justify-self: flex-start;
-}
-
 div#courses > div > div {
     display: flex;
     height: 25px;
@@ -55,5 +51,5 @@ div#courses > div > div {
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    justify-self: flex-end;
+    margin-left: 10px;
 }
