--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 div#content {
     display: flex;
-    height: 80%;
+    height: auto;
     width: 100%;
     flex-direction: column;
     justify-content: center;
