--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ div#content {
 
 div#bottom {
     display: flex;
-    height: 20%;
+    height: auto;
     width: 100%;
     flex-direction: column;
     justify-content: center;
