--- a/style.css
+++ b/style.css
@@ -24,3 +24,18 @@ button {
     height: 50px;
     width: 200px;
 }
+
+div#shoot, div#visible-finish {
+    display: flex;
+    width: 100px;
+    height: 25px;
+    background-color: seagreen;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+div#shoot:hover, div#visible-finish:hover {
+    cursor: pointer;
+}
